<resources>
    <string name="api_dt_objects">/smartcampus.vas.discovertrento.web/objects</string>
    <string name="api_jp_getlimitedtimetable">/smartcampus-journeyplanner-web/rest/getlimitedtimetable</string>
    <string name="maps_api_key">0fdlLrw2lMFFg-TnfYFuceTi0m60-Q1mBF6EMFA</string>
    <string name="empty" />
    <string name="placeholder">&#8230;</string>
    <string name="app_name">ViaggiaRovereto</string>
    <string name="btn_planjourney">Plan\njourney</string>
    <string name="btn_monitorrecurrent">Monitoring setup</string>
    <string name="btn_broadcast">Submit\nan alert</string>
    <string name="btn_myprofile">Preferences</string>
    <string name="btn_smartcheck">Real time info</string>
    <string name="btn_bikesharing">Bike sharing</string>
    <string name="btn_xmasmarkets">Christmas Markets</string>
    <string name="btn_notifications">Read\nnotifications</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="backstring">Back</string>
    <string name="btn_startmonitoring">Save to receive notifications</string>
    <string name="tab_plannew">New journey</string>
    <string name="tab_myjourneys">My journeys</string>
    <string name="tab_profile">Preferences</string>
    <string name="tab_favorites">My locations</string>
    <string name="tab_map">Map</string>
    <string name="tab_lines">Lines</string>
    <string name="tab_zones">Zones</string>
    <string name="tab_parkings">Parkings</string>
    <string name="tab_alerts">Decrees</string>
    <string name="tab_itinerary">Itinerary</string>
    <string name="dialog_itineraryname_hint">Journey name</string>
    <string name="plan_location">Location</string>
    <string name="plan_datetime">Departure</string>
    <string name="plan_preferences">Preferences</string>
    <string name="plan_timing">Time span</string>
    <string name="plan_schedule">Schedule</string>
    <string name="plan_from">From&#8230;</string>
    <string name="plan_to">To&#8230;</string>
    <string name="plan_address">Address&#8230;</string>
    <string name="plan_date">Date</string>
    <string name="plan_time">Time</string>
    <string name="plan_search">Find solutions</string>
    <string name="no_items">No items found</string>
    <string name="no_trips">No trips available for this line on this date.</string>
    <string name="no_db_data">Data unavailable or expired. Ensure the network connection is present to update the timetables.</string>
    <string name="plan_custom_prefs">Preferences</string>
    <string name="plan_custom_prefs_off">Hide</string>
    <string name="plan_custom_prefs_on">Show</string>
    <string name="monitor_off">Monitor OFF</string>
    <string name="monitor_on">Monitor ON</string>
    <string name="spinner_routes">Select a route</string>
    <string name="spinner_stops">Select a stop</string>
    <string name="spinner_stoptimes">Select a time</string>
    <string name="form_busdelay_routes">Route</string>
    <string name="form_busdelay_stop">Stop</string>
    <string name="form_busdelay_time">Time</string>
    <string name="form_busdelay_delay">Delay</string>
    <string name="header_ttypes">Transportation</string>
    <string name="header_rtypes">Preferred route</string>
    <string name="tab_broadcast">New notification</string>
    <string name="tab_news">News feed</string>
    <string name="tmp">Coming soon!</string>
    <string name="positionhint">Position</string>
    <string name="bus">Bus</string>
    <string name="car">Car</string>
    <string name="van">Van</string>
    <string name="bike">Bike</string>
    <string name="train">Train</string>
    <string name="other">Other</string>
    <string name="send">Submit alert</string>
    <string name="trainnumber">Train number</string>
    <string name="busline">Bus line</string>
    <string name="strike">Strike ends at</string>
    <string name="delay">Delay</string>
    <string name="app_failure_security">Failed to retrieve authentication data</string>
    <string name="app_failure_setup">Failed to initialize application</string>
    <string name="app_failure_operation">OOPS! An error occurred. Please check your connection or try again later.</string>
    <string name="err_delay_fields_empty">You can\'t send an alert if one or more fields are empty</string>
    <string name="app_uid_label">SmartCampus</string>
    <string name="from_field_empty">Select start position!</string>
    <string name="to_field_empty">Select destination!</string>
    <string name="datetime_before_now">You cannot plan a journey in the past!</string>
    <string name="datetime_to_before_from">End date/time is before or equal to start date/time!</string>
    <string name="no_days_selected">No days are selected!</string>
    <string name="favorites_empty_address">Select a valid address</string>
    <string name="favorites_saved">Added to favorites</string>
    <string name="favorites_already_exists_geo">This favorite already exists named \"%s\"</string>
    <string name="favorites_already_exists_name">A favorite with this name already exists</string>
    <string name="favorites_title">Favorites</string>
    <string name="favorites_add_confirmation">Do you want to add\n\n%s\n\nto your favorite places?</string>
    <string name="favorites_empty_list">You have no favorite places yet</string>
    <string name="address_dlg_current">Current location</string>
    <string name="address_dlg_map">Point on map</string>
    <string name="address_dlg_favorites">Favorite places</string>
    <string name="address_dlg_title">Select location</string>
    <string name="recur_time_from">From time</string>
    <string name="recur_time_to">To time</string>
    <string name="recur_date_from">From date</string>
    <string name="recur_date_to">To date</string>
    <string name="recur_name">Name</string>
    <string name="recur_monitor">Monitor</string>
    <string name="recurr_next">Go</string>
    <string name="recurr_save">Save</string>
    <string name="recurr_delete">Delete</string>
    <string name="from_time_field_empty">Select start time!</string>
    <string name="to_time_field_empty">Select end time!</string>
    <string name="from_date_field_empty">Select start date!</string>
    <string name="to_date_field_empty">Select end date!</string>
    <string name="name_field_empty">Specify name!</string>
    <string name="journey_saved_alert">Journey saved</string>
    <string name="recur_journey_saved_alert">Recurrent journey saved!</string>
    <string name="to_date_before_from_date">Start date should be earlier than end date!</string>
    <string name="interval_too_large">The monitoring timespan can only last up to two hours. Please select a smaller time interval.</string>
    <string name="object_not_found">Object not found!</string>
    <string name="address_select_toast">Keep your finger pressed to select a location</string>
    <string name="title_broadcast">Submit an alert</string>
    <string name="title_plan_single">Plan</string>
    <string name="title_plan_recur">Recurring journeys</string>
    <string name="title_prefs">Preferences</string>
    <string name="title_smart_check">Real time info</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_monitor_on">Monitor on</string>
    <string name="menu_item_monitor_off">Monitor off</string>
    <string name="menu_item_parking_map">Parkings on map</string>
    <string name="menu_item_parking_list">Parkings on list</string>
    <string name="always">Always</string>
    <string name="separator">-</string>
    <string name="saved_journey">Journey saved</string>
    <string name="deleted_journey">Journey deleted</string>
    <string name="deleted">deleted </string>
    <string name="label_from">From:</string>
    <string name="label_to">To:</string>
    <string name="label_days">Days:</string>
    <string name="menu_item_edit">Edit</string>
    <string name="btn_monitorsaved">Saved \njourneys</string>
    <string name="title_saved_journey">Saved journeys</string>
    <string name="title_plan_journey">Plan new journey</string>
    <string name="title_monitor_journey">Monitor journey</string>
    <string name="tab_myoneoffjourneys">JOURNEYS</string>
    <string name="tab_myrecjourneys">MONITORING</string>
    <string name="promoted_itineraries">SUSTAINABLE ITINERARIES</string>
    <string name="promoted_itinerary">Sustainable itinerary</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_smart_check">SmartCheckActivity</string>
    <string name="smart_check_bus_choose_stop_text">Select stop:</string>
    <string name="smart_check_bus_choose_line_text">Select line:</string>
    <string name="smart_check_train_choose_stop_text">Select stop:</string>
    <string name="smart_check_train_choose_line_text">Select line:</string>
    <string name="choose_direction_label">Select direction:</string>
    <string name="typeLabel">Type</string>
    <string name="delaysLabel">Delays</string>
    <string name="dayLabel">Day</string>
    <string name="loading_dialog_label">Creating timetable &#8230;</string>
    <string name="broadcast_notifications_accident">Accidents</string>
    <string name="broadcast_notifications_bus_trento_delay">Trento bus delays</string>
    <string name="broadcast_notifications_bus_rovereto_delay">Rovereto bus delays</string>
    <string name="broadcast_notifications_bus_suburban_delay">Suburban bus delays</string>
    <string name="broadcast_notifications_train_delay">Train delays</string>
    <string name="broadcast_notifications_road_works">Road work</string>
    <string name="broadcast_notifications_strike">Strikes</string>
    <string name="broadcast_notifications_traffic_jam">Traffic jams</string>
    <string name="broadcast_notifications_diversion">Diversions</string>
    <string name="smart_check_list_bus_trento_timetable">Trento Bus Timetable</string>
    <string name="smart_check_list_bus_rovereto_timetable">Rovereto Bus Timetable</string>
    <string name="smart_check_list_suburban_timetable">Extraurban Bus Timetable</string>
    <string name="smart_check_list_train_timetable">Train Timetable</string>
    <string name="smart_check_list_parking_trento">Trento Parking\nAvailability</string>
    <string name="smart_check_list_parking_rovereto">Rovereto Parking\nAvailability</string>
    <string name="smart_check_list_alerts_rovereto">Rovereto Traffic Decrees</string>
    <string name="smart_check_stops_type_mobility">Mobility</string>
    <string name="smart_check_stops_delay">%s\' delay</string>
    <string name="smart_check_stops_delay_user">%s\'u delay</string>
    <string name="smart_check_tt_delay">%s\'</string>
    <string name="smart_check_tt_delay_user">%s\'u</string>
    <string name="smart_check_parking_avail">%1$s / %2$s</string>
    <string name="smart_check_parking_full">full</string>
    <string name="smart_check_parking_dialog_title">Parking</string>
    <string name="smart_check_parking_dialog_directions">Directions</string>
    <string name="smart_check_parking_all_unavailable_toast">Real time parking availability is currently not available. It will be restored as soon as possible.</string>
    <string name="smart_check_alerts_dialog_title">Alerts</string>
    <string name="monday_short">M</string>
    <string name="tuesday_short">T</string>
    <string name="wednesday_short">W</string>
    <string name="thursday_short">T</string>
    <string name="friday_short">F</string>
    <string name="saturday_short">S</string>
    <string name="sunday_short">S</string>
</resources>